policies/.chainsaw/good.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-nonroot-01
spec:
  securityContext:
    runAsUser: 1000
  containers:
    - name: nginx
      image: nginx:latest
