policies/.chainsaw/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-require-run-as-non-root-user
spec:
  steps:
    - name: step-01
      try:
      - apply:
          file: ../require-run-as-non-root-user.yaml
      - assert:
          file: policy-ready.yaml
    - name: step-02
      try:
      - apply:
          file: good.yaml
      - apply:
          expect:
          - check:
              ($error != null): true
          file: bad.yaml
